--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -871,13 +871,17 @@ a:hover {
 }
 
 .work-content .w-more .w-ctegory {
-  color: #0078ff;
+  color: #4e4e4e;
 }
 
 .work-content .w-like {
   font-size: 2.5rem;
-  color: #0078ff;
+  color: #4e4e4e;
   float: right;
+}
+
+.work-content .w-like a:hover {
+  color: #4A416D;
 }
 
 .work-content .w-like a {
